// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`datetime widget converts UTC date and adapts to local datetime 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-undefined-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="date-time-widget-wrapper"
          >
            <div
              class="react-aria-DatePicker"
              data-rac=""
            >
              <div
                aria-describedby="react-aria-description-1"
                aria-labelledby="fieldset-undefined-field-label-my-field"
                class="react-aria-Group"
                data-rac=""
                data-react-aria-pressable="true"
                id="react-aria-:r1g:"
                role="group"
              >
                <div
                  class="react-aria-DateInput"
                  data-rac=""
                  data-react-aria-pressable="true"
                  id="react-aria-:r1f:"
                  role="presentation"
                  style="unicode-bidi: isolate;"
                >
                  <span
                    aria-describedby="react-aria-description-1"
                    aria-label="month, "
                    aria-labelledby="react-aria-:r1q: fieldset-undefined-field-label-my-field"
                    aria-valuemax="12"
                    aria-valuemin="1"
                    aria-valuenow="2"
                    aria-valuetext="2 – February"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="month"
                    enterkeyhint="next"
                    id="react-aria-:r1q:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    2
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    /
                  </span>
                  <span
                    aria-label="day, "
                    aria-labelledby="react-aria-:r1u: fieldset-undefined-field-label-my-field"
                    aria-valuemax="31"
                    aria-valuemin="1"
                    aria-valuenow="10"
                    aria-valuetext="10"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="day"
                    enterkeyhint="next"
                    id="react-aria-:r1u:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    10
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    /
                  </span>
                  <span
                    aria-label="year, "
                    aria-labelledby="react-aria-:r22: fieldset-undefined-field-label-my-field"
                    aria-valuemax="9999"
                    aria-valuemin="1"
                    aria-valuenow="2020"
                    aria-valuetext="2020"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="year"
                    enterkeyhint="next"
                    id="react-aria-:r22:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    2020
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    , 
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    ⁦
                  </span>
                  <span
                    aria-label="hour, "
                    aria-labelledby="react-aria-:r28: fieldset-undefined-field-label-my-field"
                    aria-valuemax="12"
                    aria-valuemin="1"
                    aria-valuenow="3"
                    aria-valuetext="3 PM"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="hour"
                    enterkeyhint="next"
                    id="react-aria-:r28:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    3
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    :
                  </span>
                  <span
                    aria-label="minute, "
                    aria-labelledby="react-aria-:r2c: fieldset-undefined-field-label-my-field"
                    aria-valuemax="59"
                    aria-valuemin="0"
                    aria-valuenow="1"
                    aria-valuetext="01"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="minute"
                    enterkeyhint="next"
                    id="react-aria-:r2c:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    01
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    ⁩
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                     
                  </span>
                  <span
                    aria-label="AM/PM, "
                    aria-labelledby="react-aria-:r2i: fieldset-undefined-field-label-my-field"
                    aria-valuemax="1"
                    aria-valuemin="0"
                    aria-valuenow="1"
                    aria-valuetext="PM"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="dayPeriod"
                    enterkeyhint="next"
                    id="react-aria-:r2i:"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    PM
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                     
                  </span>
                  <span
                    aria-label="time zone, "
                    aria-labelledby="react-aria-:r2m: fieldset-undefined-field-label-my-field"
                    aria-readonly="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="timeZoneName"
                    id="react-aria-:r2m:"
                    role="textbox"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    UTC
                  </span>
                </div>
                <input
                  class=""
                  data-rac=""
                  hidden=""
                  title=""
                  type="text"
                  value="2020-02-10T15:01:00+00:00[UTC]"
                />
                <button
                  aria-describedby="react-aria-description-1"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  aria-label="Calendar"
                  aria-labelledby="react-aria-:r1d: fieldset-undefined-field-label-my-field"
                  class="react-aria-Button"
                  data-rac=""
                  data-react-aria-pressable="true"
                  id="react-aria-:r1d:"
                  tabindex="0"
                  type="button"
                >
                  ▼
                </button>
              </div>
            </div>
            <div
              aria-hidden="true"
              data-a11y-ignore="aria-hidden-focus"
              data-react-aria-prevent-focus="true"
              data-testid="hidden-dateinput-container"
              style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; width: 1px; white-space: nowrap; top: 0px; left: 0px;"
            >
              <input
                form=""
                step="60"
                tabindex="-1"
                type="datetime-local"
                value="2020-02-10T15:01:00"
              />
            </div>
            <button
              class="item ui noborder button"
              type="button"
            >
              ✕
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a date-only widget when dateOnly is true 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-undefined-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="date-time-widget-wrapper"
          >
            <div
              class="react-aria-DatePicker"
              data-rac=""
            >
              <div
                aria-describedby="react-aria-description-2"
                aria-labelledby="fieldset-undefined-field-label-my-field"
                class="react-aria-Group"
                data-rac=""
                data-react-aria-pressable="true"
                id="react-aria-:r2t:"
                role="group"
              >
                <div
                  class="react-aria-DateInput"
                  data-rac=""
                  data-react-aria-pressable="true"
                  id="react-aria-:r2s:"
                  role="presentation"
                  style="unicode-bidi: isolate;"
                >
                  <span
                    aria-describedby="react-aria-description-2"
                    aria-label="month, "
                    aria-labelledby="react-aria-:r37: fieldset-undefined-field-label-my-field"
                    aria-valuemax="12"
                    aria-valuemin="1"
                    aria-valuenow="2"
                    aria-valuetext="2 – February"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="month"
                    enterkeyhint="next"
                    id="react-aria-:r37:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    2
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    /
                  </span>
                  <span
                    aria-label="day, "
                    aria-labelledby="react-aria-:r3b: fieldset-undefined-field-label-my-field"
                    aria-valuemax="31"
                    aria-valuemin="1"
                    aria-valuenow="10"
                    aria-valuetext="10"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="day"
                    enterkeyhint="next"
                    id="react-aria-:r3b:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    10
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    /
                  </span>
                  <span
                    aria-label="year, "
                    aria-labelledby="react-aria-:r3f: fieldset-undefined-field-label-my-field"
                    aria-valuemax="9999"
                    aria-valuemin="1"
                    aria-valuenow="2020"
                    aria-valuetext="2020"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="year"
                    enterkeyhint="next"
                    id="react-aria-:r3f:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    2020
                  </span>
                </div>
                <input
                  class=""
                  data-rac=""
                  hidden=""
                  title=""
                  type="text"
                  value="2020-02-10"
                />
                <button
                  aria-describedby="react-aria-description-2"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  aria-label="Calendar"
                  aria-labelledby="react-aria-:r2q: fieldset-undefined-field-label-my-field"
                  class="react-aria-Button"
                  data-rac=""
                  data-react-aria-pressable="true"
                  id="react-aria-:r2q:"
                  tabindex="0"
                  type="button"
                >
                  ▼
                </button>
              </div>
            </div>
            <div
              aria-hidden="true"
              data-a11y-ignore="aria-hidden-focus"
              data-react-aria-prevent-focus="true"
              data-testid="hidden-dateinput-container"
              style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; width: 1px; white-space: nowrap; top: 0px; left: 0px;"
            >
              <input
                form=""
                step="60"
                tabindex="-1"
                type="date"
                value="2020-02-10"
              />
            </div>
            <button
              class="item ui noborder button"
              type="button"
            >
              ✕
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a datetime widget component 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-default-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="date-time-widget-wrapper"
          >
            <div
              class="react-aria-DatePicker"
              data-rac=""
            >
              <div
                aria-describedby="react-aria-description-0"
                aria-labelledby="fieldset-default-field-label-my-field"
                class="react-aria-Group"
                data-rac=""
                data-react-aria-pressable="true"
                id="react-aria-:r3:"
                role="group"
              >
                <div
                  class="react-aria-DateInput"
                  data-rac=""
                  data-react-aria-pressable="true"
                  id="react-aria-:r2:"
                  role="presentation"
                  style="unicode-bidi: isolate;"
                >
                  <span
                    aria-describedby="react-aria-description-0"
                    aria-label="month, "
                    aria-labelledby="react-aria-:rd: fieldset-default-field-label-my-field"
                    aria-valuemax="12"
                    aria-valuemin="1"
                    aria-valuenow="10"
                    aria-valuetext="10 – October"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="month"
                    enterkeyhint="next"
                    id="react-aria-:rd:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    10
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    /
                  </span>
                  <span
                    aria-label="day, "
                    aria-labelledby="react-aria-:rh: fieldset-default-field-label-my-field"
                    aria-valuemax="31"
                    aria-valuemin="1"
                    aria-valuenow="21"
                    aria-valuetext="21"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="day"
                    enterkeyhint="next"
                    id="react-aria-:rh:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    21
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    /
                  </span>
                  <span
                    aria-label="year, "
                    aria-labelledby="react-aria-:rl: fieldset-default-field-label-my-field"
                    aria-valuemax="9999"
                    aria-valuemin="1"
                    aria-valuenow="2019"
                    aria-valuetext="2019"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="year"
                    enterkeyhint="next"
                    id="react-aria-:rl:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    2019
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    , 
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    ⁦
                  </span>
                  <span
                    aria-label="hour, "
                    aria-labelledby="react-aria-:rr: fieldset-default-field-label-my-field"
                    aria-valuemax="12"
                    aria-valuemin="1"
                    aria-valuenow="12"
                    aria-valuetext="12 AM"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="hour"
                    enterkeyhint="next"
                    id="react-aria-:rr:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    12
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    :
                  </span>
                  <span
                    aria-label="minute, "
                    aria-labelledby="react-aria-:rv: fieldset-default-field-label-my-field"
                    aria-valuemax="59"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    aria-valuetext="00"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="minute"
                    enterkeyhint="next"
                    id="react-aria-:rv:"
                    inputmode="numeric"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    00
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                    ⁩
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                     
                  </span>
                  <span
                    aria-label="AM/PM, "
                    aria-labelledby="react-aria-:r15: fieldset-default-field-label-my-field"
                    aria-valuemax="1"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    aria-valuetext="AM"
                    autocorrect="off"
                    class="react-aria-DateSegment"
                    contenteditable="true"
                    data-rac=""
                    data-type="dayPeriod"
                    enterkeyhint="next"
                    id="react-aria-:r15:"
                    role="spinbutton"
                    spellcheck="false"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    AM
                  </span>
                  <span
                    aria-hidden="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="literal"
                  >
                     
                  </span>
                  <span
                    aria-label="time zone, "
                    aria-labelledby="react-aria-:r19: fieldset-default-field-label-my-field"
                    aria-readonly="true"
                    class="react-aria-DateSegment"
                    data-rac=""
                    data-type="timeZoneName"
                    id="react-aria-:r19:"
                    role="textbox"
                    style="caret-color: transparent;"
                    tabindex="0"
                  >
                    UTC
                  </span>
                </div>
                <input
                  class=""
                  data-rac=""
                  hidden=""
                  title=""
                  type="text"
                  value="2019-10-21T00:00:00+00:00[UTC]"
                />
                <button
                  aria-describedby="react-aria-description-0"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  aria-label="Calendar"
                  aria-labelledby="react-aria-:r0: fieldset-default-field-label-my-field"
                  class="react-aria-Button"
                  data-rac=""
                  data-react-aria-pressable="true"
                  id="react-aria-:r0:"
                  tabindex="0"
                  type="button"
                >
                  ▼
                </button>
              </div>
            </div>
            <div
              aria-hidden="true"
              data-a11y-ignore="aria-hidden-focus"
              data-react-aria-prevent-focus="true"
              data-testid="hidden-dateinput-container"
              style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; width: 1px; white-space: nowrap; top: 0px; left: 0px;"
            >
              <input
                form=""
                step="60"
                tabindex="-1"
                type="datetime-local"
                value="2019-10-21T00:00:00"
              />
            </div>
            <button
              class="item ui noborder button"
              type="button"
            >
              ✕
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
